[package]
name = "juniper_relay_helpers"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Helper macros, structs and functions for working with Relay and Juniper"
authors = [
    "Alex Gisby <alex@solution10.com>"
]
documentation = "https://docs.rs/juniper_relay_helpers"
homepage = "https://github.com/solution10/juniper-relay-helpers"
repository = "https://github.com/solution10/juniper-relay-helpers"
readme = "../README.md"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["relay", "juniper", "graphql", "server", "web"]

[dependencies]

juniper_relay_helpers_codegen = { path = "../juniper_relay_helpers_codegen", version = "0.2.0" }
juniper = { workspace = true }
base64 = { workspace = true }
uuid = {  workspace = true, features = ["v4"] }
