[package]
name = "juniper_relay_helpers_codegen"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Derive macro crate for juniper_relay_helpers"
authors = [
    "Alex Gisby <alex@solution10.com>"
]
documentation = "https://docs.rs/juniper_relay_helpers"
homepage = "https://github.com/solution10/juniper-relay-helpers"
repository = "https://github.com/solution10/juniper-relay-helpers"
readme = "../README.md"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"
