[package]
name = "juniper_relay_helpers_test"
version = "0.1.5"
edition = "2024"

[dependencies]
googletest = "0.14"
juniper_relay_helpers = { path = "../juniper_relay_helpers" }
juniper = { workspace = true, features = ["schema-language"] }
uuid = { workspace = true, features = ["v4"] }

# Test server deps:
tokio = {  version = "1", features = ["full"] }
axum = "0.8"
juniper_axum = "0.3"
axum-test = "18"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }